# tc-ir

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  IR_INTERFACE_GUIDELINES.md  OP_GRAPH_IR.md  README.md
examples/: hello_library.rs
src/: autodiff.rs  dir.rs  handler.rs  lib.rs  library.rs  map.rs  op.rs  scalar.rs  tcref.rs  tensor.rs  txn.rs
tests/: examples.rs  tensor_ir.rs
